# cpp_template

./: .gitmodules  CMakeLists.txt
lib/: OpenCL.exp  OpenCL.lib
src/: CMakeLists.txt  main.cpp
